--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "firebase": "^10.9.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.3",
