--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "axios": "^1.6.8",
     "firebase": "^10.9.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
